<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_IndexedPositionSimplifiedRequest" Id="{21a15802-815a-49a9-87be-86aa92223190}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_IndexedPositionSimplifiedRequest :
(
	NoRequest,
	Busy,
	Send,
	Recieve
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>