<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_PalletStopStatus" Id="{85bee62f-4bb4-47ec-af4a-20a21d4c6787}">
    <Declaration><![CDATA[TYPE ST_PalletStopStatus :
	STRUCT
	END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>